Remove sonar warnings